fix(layout): update padding in content class for better layout consistency fix(video): increase padding in video page for improved spacing fix(player): remove console log for cleaner code

--- a/app/(pages)/layout.module.scss
+++ b/app/(pages)/layout.module.scss
@@ -27,7 +27,7 @@
 .content {
     position: relative;
     z-index: 3;
-    padding: 120px 70px 120px 70px;
+    padding: 120px 00px 120px 00px;
 }
 
 .card {
