--- a/app/(pages)/video/video.module.scss
+++ b/app/(pages)/video/video.module.scss
@@ -3,7 +3,7 @@
     height: 100%;
     overflow-y: auto;
     background: var(--main-background);
-    padding: 20px;
+    padding: 40px;
 
     .mainContent {
         display: flex;
